# OctoPrint-PandaBreath

./: .codacy.yml  .coverage  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  Taskfile.yml  babel.cfg  eslint.config.js  mkdocs.yml  pyproject.toml  setup.py
.githooks/: check_translations_sync.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bandit-sarif.yml  ci.yml  codeql.yml  docs.yml  i18n.yml  lint.yml  release.yml
docs/: configuration.md  development.md  index.md  installation.md  mqtt.md  safety.md  troubleshooting.md
extras/: README.txt  pandabreath.md
extras/github/: bug_report.yml  feature_request.yml
licenses/: README.md  chamber_control-LICENSE
octoprint_pandabreath/: __init__.py  _version.py  controller.py  frame_log.py  mqtt_bridge.py  protocol.py
octoprint_pandabreath/static/css/: pandabreath.css
octoprint_pandabreath/static/js/: pandabreath.js
octoprint_pandabreath/templates/: pandabreath_navbar.jinja2  pandabreath_settings.jinja2  pandabreath_sidebar.jinja2  pandabreath_tab.jinja2
octoprint_pandabreath/translations/de/LC_MESSAGES/: messages.mo  messages.po
tests/: conftest.py  test_controller.py  test_custom_presets.py  test_drying_interlock.py  test_frame_log.py  test_frame_log_gate.py  test_mqtt_bridge.py  test_protocol.py
translations/: messages.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
