[build-system]
requires = ["setuptools>=68", "wheel", "pip>=23.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-PandaBreath"
version = "0.1.1rc3+b437e7a"
description = "PandaBreath plugin for OctoPrint"
authors = [
    {name = "ajimaru", email = "ajimaru_gdr@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.9, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = [
    "websocket-client>=1.6",
    "websockets>=11.0",
    "paho-mqtt>=2.0,<3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_pandabreath",
    "octoprint_pandabreath.*"
]

[project.entry-points."octoprint.plugin"]
pandabreath = "octoprint_pandabreath"

[project.urls]
Homepage = "https://github.com/ajimaru/OctoPrint-PandaBreath"

[project.optional-dependencies]
develop = [
    "go-task-bin",
    # Match OctoPrint's constraint (Babel<2.17) so locally generated message
    # catalogs match the i18n CI and the OctoPrint test venvs.
    "Babel>=2.16,<2.17",
    "polib",
    "pyyaml"
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
# --cov-fail-under enforces the >80% coverage goal: the run exits non-zero
# if the measured line coverage of the package drops below the threshold.
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=octoprint_pandabreath",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["octoprint_pandabreath"]
omit = [
    # Generated by setuptools-scm; nothing to test.
    "octoprint_pandabreath/_version.py",
    # OctoPrint plugin glue — flask/OctoPrint mixins, blueprint routes and
    # event wiring. Exercising it needs a live OctoPrint harness, not a
    # unit test; the pure-logic modules (protocol/controller/frame_log)
    # are what the coverage target tracks.
    "octoprint_pandabreath/__init__.py",
]

[tool.coverage.report]
# Lines that never execute under test (defensive branches, optional-import
# fallbacks) are excluded so the percentage reflects real, reachable code.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pydocstyle]
# Multi-line docstrings put the summary on the second line (D213), matching
# the convention Codacy's Prospector run enforces. D212 (summary on the first
# line) is the mutually exclusive alternative, so it is disabled here.
convention = "pep257"
add_ignore = "D212"

[tool.pyright]
# OctoPrint (and its flask/babel stack) is a runtime dependency provided by
# the host install, not pinned in ``dependencies`` — so it is absent from the
# static-analysis sandbox and Pyright cannot resolve ``octoprint.*`` imports.
# Downgrade unresolved imports from error to keep the report focused on real
# defects rather than environment gaps.
reportMissingImports = "none"
reportMissingModuleSource = "none"
# OctoPrint's plugin mixins declare loose/``None`` return types in their stubs
# that don't match the documented runtime API contract (e.g. SimpleApiPlugin
# returning a Flask ``Response``, SettingsPlugin.on_settings_save returning
# ``None``). Our overrides follow the real contract, so suppress the resulting
# spurious incompatible-override reports.
reportIncompatibleMethodOverride = "none"

[tool.pylint.design]
max-module-lines = 1500

[tool.pylint.main]
# Skip non-source trees: the editable OctoPrint checkout under .cache, the
# project's own virtualenvs, and the setuptools build mirror.
ignore-paths = [
    "^\\.cache/.*$",
    "^\\.venv.*?/.*$",
    "^build/.*$",
]
